k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vkget
  namespace: vkget
spec:
  selector:
    app: vkget
  ports:
    - name: http
      port: 80
      targetPort: 8080
