k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vkget
  namespace: vkget
spec:
  ingressClassName: traefik
  rules:
    - host: vkget.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vkget
                port:
                  number: 80
